add cricuit breaker configuration

--- a/sales/src/main/resources/application.properties
+++ b/sales/src/main/resources/application.properties
@@ -9,3 +9,13 @@ service.external.api.rickmorty.url=https://rickandmortyapi.com/api
 
 common.headers.tenantId=DHBO
 
+resilience4j.circuitbreaker.instances.newSaleCB.registerHealthIndicator=true
+resilience4j.circuitbreaker.instances.newSaleCB.slidingWindowSize=10
+resilience4j.circuitbreaker.instances.newSaleCB.minimumNumberOfCalls=5
+resilience4j.circuitbreaker.instances.newSaleCB.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.newSaleCB.waitDurationInOpenState=10s
+resilience4j.circuitbreaker.instances.newSaleCB.permittedNumberOfCallsInHalfOpenState=3
+resilience4j.circuitbreaker.instances.newSaleCB.automaticTransitionFromOpenToHalfOpenEnabled=true
+resilience4j.circuitbreaker.instances.newSaleCB.recordExceptions=com.dharbor.sales.exceptions.SaleNotCompletedException
+resilience4j.circuitbreaker.instances.newSaleCB.ignoreExceptions=feign.FeignException$NotFound
+
